--- a/BioadresarAndroid/res/layout/edit_appendix.xml
+++ b/BioadresarAndroid/res/layout/edit_appendix.xml
@@ -98,19 +98,20 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal" >
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal" >
 
                 <ImageView
                     android:id="@+id/backButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/back_button" />
 
                 <ImageView
                     android:id="@+id/sendButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/send_button" />
