--- a/BioadresarAndroid/res/layout/edit_overview.xml
+++ b/BioadresarAndroid/res/layout/edit_overview.xml
@@ -27,7 +27,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/backButton"
@@ -39,7 +40,7 @@
             <ImageView
                 android:id="@+id/okButton"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="10dp"
                 android:src="@drawable/ok_button" />
