--- a/BioadresarAndroid/res/layout/edit_position.xml
+++ b/BioadresarAndroid/res/layout/edit_position.xml
@@ -7,100 +7,109 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="@string/farm_name"
-            android:textAppearance="@style/HnutiDuha.HeaderMedium"
-            android:textColor="@color/White" />
-
-        <EditText
-            android:id="@+id/farmName"
-            style="@style/HnutiDuha.InputMedium"
-            android:layout_width="match_parent"
-            android:hint="@string/here_fill_farm_name"
-            android:inputType="textPersonName"
-            android:maxLines="1"
-            android:nextFocusDown="@+id/latitude"
-            android:nextFocusForward="@+id/latitude"
-            android:nextFocusRight="@+id/latitude" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="0.1" >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="@string/coordinates"
+                android:text="@string/farm_name"
                 android:textAppearance="@style/HnutiDuha.HeaderMedium"
                 android:textColor="@color/White" />
 
-            <LinearLayout
+            <EditText
+                android:id="@+id/farmName"
+                style="@style/HnutiDuha.InputMedium"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <EditText
-                    android:id="@+id/latitude"
-                    style="@style/HnutiDuha.InputMedium"
-                    android:layout_width="fill_parent"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
-                    android:hint="@string/lat"
-                    android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:nextFocusDown="@+id/longitude"
-                    android:nextFocusForward="@+id/longitude"
-                    android:nextFocusLeft="@+id/farmName"
-                    android:nextFocusRight="@+id/longitude"
-                    android:nextFocusUp="@+id/farmName" />
-
-                <EditText
-                    android:id="@+id/longitude"
-                    style="@style/HnutiDuha.InputMedium"
-                    android:layout_width="fill_parent"
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="1"
-                    android:hint="@string/lon"
-                    android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:nextFocusForward="@+id/nextButton"
-                    android:nextFocusLeft="@+id/latitude"
-                    android:nextFocusRight="@+id/nextButton"
-                    android:nextFocusUp="@+id/farmName" />
-            </LinearLayout>
+                android:hint="@string/here_fill_farm_name"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:nextFocusDown="@+id/latitude"
+                android:nextFocusForward="@+id/latitude"
+                android:nextFocusRight="@+id/latitude" />
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/nextButton"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="0"
-            android:background="@android:color/transparent"
-            android:src="@drawable/next_button" />
+            android:layout_marginBottom="10dp" >
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginRight="10dp"
+                android:layout_weight="0.3"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/coordinates"
+                    android:textAppearance="@style/HnutiDuha.HeaderMedium"
+                    android:textColor="@color/White" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="0dp"
+                    android:orientation="horizontal" >
+
+                    <EditText
+                        android:id="@+id/latitude"
+                        style="@style/HnutiDuha.InputMedium"
+                        android:layout_width="fill_parent"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="1"
+                        android:hint="@string/lat"
+                        android:inputType="numberDecimal"
+                        android:maxLines="1"
+                        android:nextFocusDown="@+id/longitude"
+                        android:nextFocusForward="@+id/longitude"
+                        android:nextFocusLeft="@+id/farmName"
+                        android:nextFocusRight="@+id/longitude"
+                        android:nextFocusUp="@+id/farmName" />
+
+                    <EditText
+                        android:id="@+id/longitude"
+                        style="@style/HnutiDuha.InputMedium"
+                        android:layout_width="fill_parent"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:hint="@string/lon"
+                        android:inputType="numberDecimal"
+                        android:maxLines="1"
+                        android:nextFocusForward="@+id/nextButton"
+                        android:nextFocusLeft="@+id/latitude"
+                        android:nextFocusRight="@+id/nextButton"
+                        android:nextFocusUp="@+id/farmName" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/nextButton"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="0.4"
+                android:gravity="bottom"
+                android:src="@drawable/next_button" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
